--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -9,12 +9,20 @@
     margin-right: 0.4rem;
   }
 
+  .banner {
+    padding-top: 3rem;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-content: center;
+  }
+
   .nav-menu {
-    /* display: block; */
+    display: block;
     width: 100%;
     height: 100vh;
     position: fixed;
-    /* z-index: 999; */
+
     background: var(--baltic-sea);
     padding: 15px;
     top: 100px;
@@ -22,6 +30,19 @@
 
     transform: translateX(200%);
     transition: all 0.5s cubic-bezier(0.92, 0.01, 0.35, 0.99);
+  }
+
+  .nav-menu ul {
+    display: flex;
+    justify-content: space-around;
+    flex-direction: column;
+  }
+
+  .nav-menu li a {
+    line-height: 9em;
+    font-weight: 600;
+    text-transform: uppercase;
+    color: var(--fire-bush);
   }
 
   .show-navmenu {
@@ -39,16 +60,41 @@
     padding: 1.5rem 3rem !important;
   }
   .nav-menu {
-    position: absolute;
-    display: block;
-    width: 50%;
+    display: flex;
+    width: 300px;
+    transform: translateX(-200%);
+    border-radius: 6px;
+    height: 600px;
+
+    justify-content: flex-start;
+    align-items: center;
+    display: flex;
   }
 
   .nav-menu ul {
     display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
+    flex-direction: column;
+    align-items: flex-start;
+    padding-left: 24px;
+  }
+
+  .nav-menu li {
+    display: flex;
+    justify-content: space-between;
+    list-style: none;
+    align-content: center;
+  }
+
+  .nav-menu li a {
+    font-size: 21px;
+    text-transform: none;
+    font-weight: 500;
+    text-decoration: none;
+  }
+
+  .show-navmenu {
+    pointer-events: auto;
+    transform: translate(7%);
   }
   .menu-btn {
     position: relative;
